<resources>
    <string name="app_name">Posify</string>
    <string name="enter_item">Enter Items</string>
    <string name="enter_id">Enter Batch Number</string>
    <string name="enter_price">Enter Price\n</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="show_all_items">Show Items\n</string>
    <string name="delete">Delete Items\n</string>
    <string name="update">Modify Items\n</string>
    <string name="add">Add Items\n</string>
    <string name="item_id">Item ID</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>


    <string name="shared_preferences">RestaurantPreference</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="add_to_cart_btn">Add</string>
    <string name="proceed_to_cart_btn">Proceed to Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="ordering_from">Ordering From: </string>
    <string name="place_order">Place Order (Rs)</string>


    <string name="supabase_url">https://sfwkwfhdcxbtwqbulmzv.supabase.co</string>
    <string name="supabase_api_key">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNmd2t3ZmhkY3hidHdxYnVsbXp2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDc1NDc3MjcsImV4cCI6MjA2MzEyMzcyN30.DaorlyXkgMhHx1qihtpCAXoWs5dntxWRDL7vCoQ8U0s</string>
    <string name="order">Order</string>
    <string name="food_image">Food image</string>
    <string name="delicious_and_fresh">Delicious and fresh</string>
    <string name="food_name">Food Name</string>
    <string name="_5_99">$5.99</string>
    <string name="fetching_order">Fetching Order ....</string>
    <string name="hot_ones">Hot Ones ?</string>
    <string name="burger">Burger</string>
    <string name="checkout">Checkout</string>
    <string name="pizza">Pizza</string>
    <string name="show_all">Show All</string>
    <string name="your_cart">Your Cart</string>
    <string name="app_logo">App Logo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_user_register">New User? Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="orders">Orders</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="neg">-</string>
    <string name="pos">+</string>
</resources>