<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/main_itemstorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".items.ItemsStorage">

        <EditText
            android:id="@+id/editTextItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter Item"
            android:hint="@string/enter_item"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter Price"
            android:hint="@string/enter_id"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextPrice"
            android:autofillHints="Enter Price"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>

        <EditText
            android:id="@+id/editTextQuantity"
            android:autofillHints="Enter Quantity"
            android:hint="@string/enter_quantity"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginTop="16dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/btnAdd"
                android:text="@string/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"/>

            <Button
                android:id="@+id/btnUpdate"
                android:text="@string/update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"/>

            <Button
                android:id="@+id/btnDelete"
                android:text="@string/delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"/>

            <Button
                android:id="@+id/btnShow"
                android:text="@string/show_all_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"/>
        </GridLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
